extends RichTextLabel



func _on_1_mouse_entered():

	bbcode_text = "four\ntwo\neleven\ntwo"


func _on_6_mouse_entered():
	bbcode_text = "two\nfour\nnine\nten"


func _on_5_mouse_entered():
	bbcode_text = "four\ntwelve\nfour\nnine"


func _on_4_mouse_entered():
	bbcode_text = "ten\nseven\ntwelve\none"


func _on_3_mouse_entered():
	bbcode_text = "five\none\nsix\nseven"


func _on_2_mouse_entered():
	bbcode_text = "seven\nten\none\nthree"
